databases/honcho-postgres/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: honcho-postgres-allow-shikanime
  namespace: shikanime-postgres
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shikanime
          podSelector:
            matchLabels:
              app.kubernetes.io/name: honcho
      ports:
        - port: 5432
  podSelector:
    matchLabels:
      cnpg.io/cluster: honcho-postgres
  policyTypes:
    - Ingress
